EXITS - Report Theme - Keep theme consistent on new reports

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -252,29 +252,20 @@
 	REPORTS
 ********************************************/
 
-.blueThemeReportTableHeader {
+.blueThemeReportTable {
 	border:1px solid #3b5998;
 	margin-top:10px;
 }
 
-.blueThemeReportTable {
-	border:1px solid #3b5998;
-	margin-top:3px;
-	margin-bottom:15px;
-}
-
-.blueThemeReportTableHeader .note, 
 .blueThemeReportTable .note {
 	font-size:9px;
 }
 
-.blueThemeReportTableHeader .noteAlert,
 .blueThemeReportTable .noteAlert {
 	color:#F00;
 	font-size:9px;	
 }
 
-.blueThemeReportTableHeader th,
 .blueThemeReportTable th {
 	padding:5px;
 	color:#FFFFFF;
@@ -283,7 +274,6 @@
 	text-transform:uppercase;
 }
 
-.blueThemeReportTableHeader th.left,
 .blueThemeReportTable th.left {
 	padding:5px;
 	color:#FFFFFF;
@@ -293,7 +283,6 @@
 	background-color:#3b5998; 
 }
 
-.blueThemeReportTableHeader th.center,
 .blueThemeReportTable th.center {
 	padding:5px;
 	color:#FFFFFF;
@@ -303,7 +292,6 @@
 	background-color:#3b5998; 
 }
 
-.blueThemeReportTableHeader .attention,
 .blueThemeReportTable .attention {
 	color:#000;
 	font-weight:bold;
@@ -311,7 +299,6 @@
 	background-color:#FF6; 
 }
 
-.blueThemeReportTableHeader .alert
 .blueThemeReportTable .alert {
 	color:#FFFFFF;
 	font-weight:bold;
@@ -319,45 +306,38 @@
 	background-color:#F00; 
 }
 
-.blueThemeReportTableHeader td.subTitleLeft,
 .blueThemeReportTable td.subTitleLeft {
 	color:#3b5998;
 	font-weight:bold;
-	border-bottom:#3b5998;
-	border-bottom:1px solid #EDEFF4;
+	border-bottom:1px solid #becbeb;
 }
 
-.blueThemeReportTableHeader td.subTitleCenter,
 .blueThemeReportTable td.subTitleCenter {
 	color:#3b5998;
 	font-weight:bold;
 	text-align:center;
-	border-bottom:1px solid #EDEFF4;
+	border-bottom:1px solid #becbeb;
 }
 
-.blueThemeReportTableHeader td.subTitleRight,
 .blueThemeReportTable td.subTitleRight {
 	color:#3b5998;
 	font-weight:bold;
 	text-align:right;
-	border-bottom:1px solid #EDEFF4;
+	border-bottom:1px solid #becbeb;
 }
 
-.blueThemeReportTableHeader td.summaryLeft,
 .blueThemeReportTable td.summaryLeft {
 	color:#000;
 	font-weight:bold;
 	border-bottom:#3b5998;
 }
 
-.blueThemeReportTableHeader td.summaryCenter,
 .blueThemeReportTable td.summaryCenter {
 	color:#000;
 	font-weight:bold;
 	text-align:center;
 }
 
-.blueThemeReportTableHeader td.summaryRight,
 .blueThemeReportTable td.summaryRight {
 	color:#000;
 	font-weight:bold;
@@ -365,17 +345,14 @@
 	padding-right:5px;
 }
 
-.blueThemeReportTableHeader tr.on,
 .blueThemeReportTable tr.on {
 	background-color:#EDEFF4;
 }
 
-.blueThemeReportTableHeader tr.off,
 .blueThemeReportTable tr.off {
 	background-color:#FFFFFF;
 }
 
-.blueThemeReportTableHeader td.center,
 .blueThemeReportTable td.center {
 	text-align:center;
 }
