EXITS - Placement Management - Displaying Mileage alert on placement management - Updating mileage whenever host or supervising representative is updated

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -243,6 +243,24 @@
 	padding-right:10px;
 }
 
+.attention {
+	color:#000;
+	font-weight:bold;
+	padding:5px;
+	margin:0px 3px 0px 3px;
+	border-bottom:1px solid #FFFFFF;
+	background-color:#FF6; 
+}
+
+.alert {
+	color:#FFFFFF;
+	font-weight:bold;
+	padding:5px;
+	margin:0px 3px 0px 3px;
+	border-bottom:1px solid #FFFFFF;
+	background-color:#F00; 
+}
+
 /********************************************
 	END OF PLACEMENT MANAGEMENT
 ********************************************/
