EXITS - 2nd Visit Report - Setting datePlacedEnded to calculate how many days student was placed and setting automatically 2nd visit report as not needed

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -301,6 +301,15 @@
 	background-color:#3b5998; 
 }
 
+.blueThemeReportTable th.right {
+	padding:5px;
+	color:#FFFFFF;
+	text-align:right;
+	font-weight:bold;
+	text-transform:none;
+	background-color:#3b5998; 
+}
+
 .blueThemeReportTable th.center {
 	padding:5px;
 	color:#FFFFFF;
