--- a/www/student-management/nsmg/smg.css
+++ b/www/student-management/nsmg/smg.css
@@ -11,6 +11,8 @@ table.nav_bar { font-size: 12px; background-color: #ffffff; border: 1px solid #2
 
 .sectionBorderOnly {border-right: 2px solid #c6c6c6; border-left: 2px solid #c6c6c6; background: #ffffff;}
 
+.sectionHeader { border-bottom: 1px solid #c6c6c6; vertical-align:top; }
+
 a:link, a:visited{
 	color: #5E748C;
 	text-decoration: none;
