EXITS - Placement Management - Checking for school acceptance and CBC compliant before approving a placement - Displaying CBC information on paperwork section - Phasing out date_received smg_users_cbc and smg_hosts_cbc
- EXITS - Pending Placements
- Displaying new colors based on paperwork status

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -252,6 +252,24 @@
 	background-color:#FF6; 
 }
 
+.attentionGreen {
+	color:#000;
+	font-weight:bold;
+	padding:5px;
+	margin:0px 3px 0px 3px;
+	border-bottom:1px solid #FFFFFF;
+	background-color:#A0E1A1; 
+}
+
+.rejected {
+	color:#000;
+	font-weight:bold;
+	padding:5px;
+	margin:0px 3px 0px 3px;
+	border-bottom:1px solid #FFFFFF;
+	background-color:#FB8822; 
+}
+
 .alert {
 	color:#FFFFFF;
 	font-weight:bold;
