--- a/www/student-management/extra/internal/linked/css/appSection.css
+++ b/www/student-management/extra/internal/linked/css/appSection.css
@@ -18,12 +18,12 @@ Page Header
 	background-color: #FFFFFF; /* Light Blue #c2d9e9; #FFFFFF; */
 	border-bottom:10px solid #0069aa; /* Blue #0069aa; | Extra Orange #FF7E0D; */
 	width:100%;
-	height:70px;
+	height:60px;
 }
 
 .topLeft {
 	float:left;
-	height:65px;
+	height:55px;
 	/* border:1px solid #FFC; */
 }
 
@@ -32,7 +32,7 @@ Page Header
 	height:60px;
 	float:left;
 	display:block;
-	margin:5px 0px 0px 10px;
+	margin:0px 0px 0px 10px;
 	background-repeat:no-repeat;
 	background-image:url(../../pics/extra-small-logo.jpg);
 }
@@ -102,7 +102,7 @@ Page Header
 }
 
 .welcomeMessage {
-	margin-top:40px;
+	margin-top:30px;
 	padding:5px 5px 0px 0px;
 	font-family: segoe ui, Arial, sans-serif; 
 	font-size:1em;
@@ -464,7 +464,7 @@ Page Footer
 
 .pageFooter, .push {
 	width:100%;
-	height: 20px; /* .push must be the same height as .footer */
+	/* height: 12px; .push must be the same height as .footer */
 	background-color: #0069aa; /* #020D1E */
 	/* Multicolumn Layout With Sticky Footer | Add clear to the .push div | clear: both; */ 
 	clear: both;
@@ -473,9 +473,9 @@ Page Footer
 .pageFooter .footerText {
 	color: #FFF;
 	text-align:center;
-	font-size:1em;
+	font-size:0.7em;
 	font-weight:bold;
-	padding-top:0.3em;
+	padding-top:0.2em;
 }
 
 
