EXITS - slideshow for adds on welcome page

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -773,7 +773,7 @@ input.projectHelpHours {
 		font-size: 10px;
 	}
 .sticky {
-	background-image: url(pics/sticky.png);
+	background-image: url(https://ise.exitsapplication.com/nsmg/pics/sticky.png);
 	background-repeat: no-repeat;
 	height: 50px;
 	width: 64px;
