--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -217,16 +217,18 @@
 }
 
 .singlePlacementAlert {
-	width:550;
+	width:99%;
 	height:55px;
-	border:#666;
-	background-color:#FF9797;
+	border: #e85555 1px solid; 
+	background-color:#fac7c7;
 	text-align:center;
-	-moz-border-radius: 15px;
-	border-radius: 15px;
-	vertical-align:center;
-	margin-left:auto;
-	margin-right:auto;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	margin:5px auto 5px auto;
+}
+
+.singlePlacementAlert h1 {
+	color:#000;
 }
 
 .paperwork td {
@@ -346,6 +348,10 @@
 	font-weight:bold;
 	border-bottom:1px solid #FFFFFF;
 	background-color:#F00; 
+}
+
+.blueThemeReportTable td {
+	vertical-align:top;	
 }
 
 .blueThemeReportTable td.subTitleLeft {
@@ -539,6 +545,8 @@ div.pageMessages {
 	text-align:center;
 	background-color: #c2d9e9;
 	border: #0069aa 1px solid; 
+	-moz-border-radius: 10px;
+	border-radius: 10px;
 	font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -564,6 +572,8 @@ div.errors {
 	padding: 5px 10px; 
 	border: #FC6 1px solid; 
 	background-color: #FFC; 
+	-moz-border-radius: 10px;
+	border-radius: 10px;
 }
 
 div.errorContainer label,
