EXITS - Placement Paperwork - Adding alert notification on the fly - Date Relocated added but commented for now - Resolving issue not displaying CBCs for members that are less than 17 years old.

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -622,6 +622,26 @@ div.errors ol {
 
 
 /********************************************
+	 INLINE FORM ERROR
+********************************************/
+span.errors { 
+	text-align:center;
+    margin:0px auto 10px 10px;
+	padding: 5px 10px; 
+	border: #FC6 1px solid; 
+	background-color: #FFC; 
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	color: #C00; 
+	font-style: normal; 
+	font-weight: bold; 
+}
+/********************************************
+	 END OF INLINE FORM ERROR
+********************************************/
+
+
+/********************************************
 	 REPORTS STYLE
 ********************************************/
 table.nav_bar { 
