EXITS - New Report Section - Only available for Marcus, James, Josh and Brian H.

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -5,7 +5,7 @@
 	HEADER.CFM
 ********************************************/
 .smlink         		{font-size: 11px;}
-.section        		{border-top: 1px solid #c6c6c6;; border-right: 2px solid #c6c6c6;border-left: 2px solid #c6c6c6;border-bottom: 0px; background: #ffffff;}
+.section        		{border-top: 1px solid #c6c6c6; border-right: 2px solid #c6c6c6;border-left: 2px solid #c6c6c6;border-bottom: 0px; background: #ffffff;}
 .sideborders			{border-right: 2px solid #c6c6c6;border-left: 2px solid #c6c6c6; background: #ffffff;}
 .sectionFoot    		{border-bottom: 1px solid #BB9E66; background: #FAF7F1;line-height:1px;font-size:2px;}
 .sectionBottomDivider 	{border-bottom: 1px solid #BB9E66; background: #FAF7F1;line-height:1px;}
@@ -306,9 +306,57 @@
 	REPORTS
 ********************************************/
 
+.reportButton {
+	width:30%;
+	color:#3b5998;
+	font-size:1.3em;
+	font-weight:bold;
+	text-align:center;
+	padding: 15px;
+	margin: 15px 7px 15px 7px; 
+	display:inline-table;
+	-moz-border-radius: 15px;
+	border-radius: 10px;
+	border: #3b5998 1px solid; 
+	background-color: #EDEFF4;
+}
+
+.reportButton:hover {
+	background-color: #FFF; 	
+	/*
+	border: #FC6 1px solid; 
+	background-color: #FFC; 	
+	*/	
+}
+
+.reportButton a {
+	color:#3b5998;
+	text-decoration:none;
+}
+
+.reportSection {
+	width:100%;
+	border-bottom: 0px; 
+	background: #ffffff;
+	padding:0px 20px 0px 20px;
+	border-top: 1px solid #c6c6c6; 
+	border-right: 2px solid #c6c6c6;
+	border-left: 2px solid #c6c6c6;
+}
+
+.reportSection .left {
+	float:left;	
+	margin-bottom:10px;
+}
+
+.reportSection .right {
+	float:right;
+	margin-bottom:10px;
+}
+
 .blueThemeReportTable {
 	border:1px solid #3b5998;
-	margin-top:10px;
+	margin-top:5px;
 }
 
 .blueThemeReportTable .note {
@@ -318,6 +366,11 @@
 .blueThemeReportTable .noteAlert {
 	color:#F00;
 	font-size:9px;	
+}
+
+.blueThemeReportTable .required {
+	color:#F00;
+	font-weight:bold;
 }
 
 .blueThemeReportTable th {
@@ -391,6 +444,12 @@
 	font-weight:bold;
 	text-align:right;
 	border-bottom:1px solid #becbeb;
+}
+
+.blueThemeReportTable td.subTitleRightNoBorder {
+	color:#3b5998;
+	font-weight:bold;
+	text-align:right;
 }
 
 .blueThemeReportTable td.summaryLeft {
@@ -739,17 +798,15 @@ input.projectHelpHours {
 	 END OF PROJECT HELP
 ********************************************/
 
+
 /********************************************
 	 WELCOME SLIDESHOW AND NEWS BOX
 ********************************************/
  .rdholder {
-
-  height:auto;
-  width:auto;
-  margin-bottom:25px;
-
- } 
-
+	height:auto;
+	width:auto;
+	margin-bottom:25px;
+} 
 
  .rdholder .rdbox {
 	border-left:1px solid #c6c6c6;
@@ -760,23 +817,21 @@ input.projectHelpHours {
 	min-height: 137px;
  } 
 
- .rdtop {
+.rdtop {
 	width:auto;
 	height:30px;
 	border: 1px solid #c6c6c6;
 	/* -webkit for Safari and Google Chrome */
-
-  -webkit-border-top-left-radius:12px;
+	-webkit-border-top-left-radius:12px;
 	-webkit-border-top-right-radius:12px;
 	/* -moz for Firefox, Flock and SeaMonkey  */
-
-  -moz-border-radius-topright:12px;
+	-moz-border-radius-topright:12px;
 	-moz-border-radius-topleft:12px;
 	background-color: #FFF;
 	color: #006699;
- } 
+} 
 
- .rdtop .rdtitle {
+.rdtop .rdtitle {
 	margin:0;
 	line-height:30px;
 	font-family:Arial, Geneva, sans-serif;
@@ -786,41 +841,38 @@ input.projectHelpHours {
 	padding-bottom: 0px;
 	padding-left: 10px;
 	color: #006699;
- }
+}
 
- .rdbottom {
+.rdbottom {
+	width:auto;
+	height:10px;
+	border-bottom: 1px solid #c6c6c6;
+	border-left:1px solid #c6c6c6;
+	border-right:1px solid #c6c6c6;
+	/* -webkit for Safari and Google Chrome */
+	-webkit-border-bottom-left-radius:12px;
+	-webkit-border-bottom-right-radius:12px;
+	/* -moz for Firefox, Flock and SeaMonkey  */
+	-moz-border-radius-bottomright:12px;
+	-moz-border-radius-bottomleft:12px; 
+}
 
-  width:auto;
-  height:10px;
-  border-bottom: 1px solid #c6c6c6;
-  border-left:1px solid #c6c6c6;
-  border-right:1px solid #c6c6c6;
-   /* -webkit for Safari and Google Chrome */
-
-  -webkit-border-bottom-left-radius:12px;
-  -webkit-border-bottom-right-radius:12px;
-
-
- /* -moz for Firefox, Flock and SeaMonkey  */
-
-  -moz-border-radius-bottomright:12px;
-  -moz-border-radius-bottomleft:12px; 
- 
- }
 .rdPic {
 	padding: 3px;
 	border: thin solid #CCC;
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	font-style: italic;
-	 -moz-box-shadow: 3px 3px 4px #999; /* Firefox */
- -webkit-box-shadow: 3px 3px 4px #999; /* Safari/Chrome */
- box-shadow: 3px 3px 4px #999; /* Opera and other CSS3 supporting browsers */
- -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#999999')";/* IE 8 */
- : progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#999999');/* IE 5.5 - 7 */  
+	-moz-box-shadow: 3px 3px 4px #999; /* Firefox */
+	-webkit-box-shadow: 3px 3px 4px #999; /* Safari/Chrome */
+	box-shadow: 3px 3px 4px #999; /* Opera and other CSS3 supporting browsers */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#999999')";/* IE 8 */
+	: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#999999');/* IE 5.5 - 7 */  
 }
+
 .new_weeks {
-		font-size: 10px;
-	}
+	font-size: 10px;
+}
+
 .sticky {
 	background-image: url(https://ise.exitsapplication.com/nsmg/pics/sticky.png);
 	background-repeat: no-repeat;
@@ -834,8 +886,6 @@ input.projectHelpHours {
 	padding-top: 2px;
 	padding-right: 2px;
 }
-
-
 /********************************************
 	 END OF WELCOME AND NEWS BOX
 ********************************************/
